deploy/eks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
spec:
  selector:
    matchLabels:
      tier: data-service
  replicas: 1
  template:
    metadata:
      labels:
        tier: data-service
    spec:
      containers:
      - name: data-service
        image: iftimiep/ph:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
