deploy/eks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
  labels:
    tier: data-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    tier: data-service
