deploy/eks/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-nlb
  name: data-service
spec:
  rules:
    - host: app.posthog.local
      http:
        paths:
          - path: /
            backend:
              serviceName: data-service
              servicePort: 5000
